@@ -202,6 +202,8 @@ if test -n "${with_cross_host}"; then
    AC_DEFINE(SMALL_CONFIG)
 fi
 
+AM_CONDITIONAL(USE_LIBDIR, test -z "$with_cross_host")
+
 if test "${multilib}" = "yes"; then
   multilib_arg="--enable-multilib"
 else
