@@ -1,5 +1,11 @@
 1999-06-21  Tom Tromey  <tromey@cygnus.com>
 
+	* Makefile.in: Rebuilt.
+	* Makefile.am (toolexeclibdir): Define as libdir when
+	appropriate.
+	* configure: Rebuilt.
+	* configure.in (USE_LIBDIR): New conditional.
+
 	* configure: Rebuilt.
 	* configure.in: Recognize all forms of alpha.
 
